--- a/2048.css
+++ b/2048.css
@@ -8,12 +8,37 @@ hr{
 #board{
     width:400px;
     height:400px;
-
+    position: relative;
     background-color: #cdc1b5;
     border: 6px solid #bbada0;
     margin:0 auto;
     display:flex;
     flex-wrap:wrap;
+}
+.arkeys{
+    height: 140px;
+    position: absolute;
+    left: 100px;top: 160px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 170px;
+   background-color:#eee4da;
+   padding: 24px;
+   border: 8px solid #bbada0;
+}
+.arkeys div{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    width: 120px;
+    height: 25px;
+}
+.arkeys div p{
+    text-align: center;
+    color: #727371;
+    font-weight: bold;
 }
 .tile{
     width:90px;
